--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Asteroides_Av2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jl1.0.1.jar=D:\\Documentos\\\u00c1rea de Trabalho\\Est\u00e1cio\\4\u00ba Semestre\\Programa\u00e7\u00e3o II\\Trabalho\\Bibliotecas\\jl1.0.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jl1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
